--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
                     <figcaption>Spiced Rum Tea</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/img-donut.jpg" alt="Seasonal Donuts">
+                    <img src="images/img-donut.jpg" alt="Seasonal Donuts">
                     <figcaption>Seasonal Donuts</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
+                    <img src="images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
                     <figcaption>Myrtle Ave Tea</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
+                    <img src="images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
                     <figcaption>Bedford Bizarre Tea</figcaption>
                 </figure>
             </div>
